2014-02-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 4.0+beta6.

2014-02-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CHANGES: Updated.

2014-02-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/sighand.h: Removed "extern" declaration for any protos.
	This is of no use.

2014-02-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/sighand.h: Removed protos for sighand_pipe, sighand_alarm_plugin,
	sighand_term, sighand_int, sighand_kill, sighand_sigusr1, sighand_io.
	These are not defined anywhere nor used.

2014-02-12  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Remove dead code and fix memory leaks. Found using cppchecker.

	* src/openvassd.c (set_globals_from_preferences): Call plugins_free
	instead of arg_free, fixing memory leaks.

	* src/CMakeLists.txt: Don't build parser.c

	* src/parser.c, src/parser.h: Remove unused files.

	* COPYING: Remove parser.c and parser.h details.

	* src/processes.c (sighand_process_term): Remove unused function.

	* src/sighand.c, src/sighand.h (sighand_alarm): Remove unused function.

	* src/utils.c, src/utils.h (hosts_arglist_to_string): Remove unused
	function.

2014-02-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/attack.c (attack_network): Removed outdated docstring element.

2014-02-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/comm.c (comm_terminate): Removed commented-out code fragements.
	It hangs around since at least 9 years.
	(comm_init, comm_wait_order): Write log message when exiting.

2014-02-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/attack.c (attack_network): Changed return type from int
	to void because it is always returned success anyway (problems
	are reported as errors which is sufficient).

	* src/attack.h: Adjust proto accordingly.

2014-02-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
